fix status when stepping

--- a/lmsm.html
+++ b/lmsm.html
@@ -37,7 +37,7 @@
     CodeMirror.defineSimpleMode('firth', {
       start: [
       {
-          regex: /(?:def|get|else|stop|var|return|swap|end|dup|do)\b/,
+          regex: /(?:def|loop|get|else|stop|var|return|swap|end|dup|do)\b/,
           token: 'keyword'
         },
         {
