--- a/lmsm-vanilla.html
+++ b/lmsm-vanilla.html
@@ -58,7 +58,29 @@
     <div id="titleBox" class="box center" data-cols="1 3" data-rows="1">
       <h2 class="allcaps">Little Man Stack Machine Emulator</h2>
     </div>
-    <div id="codeEditorBox" class="box" data-cols="2" data-rows="2 5">
+    <div id="codeEditorBoxFirth" class="box" data-cols="1" data-rows="2 3">
+      <strong class="allcaps block titlebar">Firth</strong>
+      <span>
+        <section class="tool-bar">
+          <label>
+            <input type="button" _="
+            on click 
+            call $lmsm.compile()
+            call syncToDOM()
+          " value="Compile" />
+          </label>
+          <label>
+            <input type="button" _="
+          on click 
+          call $lmsm.run()
+          call syncToDOM()
+          " value="Run" />
+          </label>
+        </section>
+        <textarea id="codeEditorFirth"></textarea>
+    </div>
+    </span>
+    <div id="codeEditorBox" class="box" data-cols="1" data-rows="4 5">
       <strong class="allcaps block titlebar">Assembly</strong>
       <section class="tool-bar">
         <label>
@@ -95,27 +117,7 @@
       </section>
       <textarea id="codeEditor"></textarea>
     </div>
-    <div id="codeEditorBoxFirth" class="box" data-cols="1" data-rows="2 5">
-      <strong class="allcaps block titlebar">Firth</strong>
-      <section class="tool-bar">
-        <label>
-          <input type="button" _="
-            on click 
-            call $lmsm.compile()
-            call syncToDOM()
-          " value="Compile" />
-        </label>
-        <label>
-          <input type="button" _="
-          on click 
-          call $lmsm.run()
-          call syncToDOM()
-          " value="Run" />
-        </label>
-      </section>
-      <textarea id="codeEditorFirth"></textarea>
-    </div>
-    <div id="registerFileBox" class="box" data-cols="3" data-rows="2">
+    <div id="registerFileBox" class="box" data-cols="2" data-rows="2">
       <strong class="allcaps block titlebar">Register File</strong>
       <div class="margin grid">
         <div class="box bad" data-cols="1">
@@ -159,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div id="memoryBox" class="box" data-cols="3" data-rows="3 5">
+    <div id="memoryBox" class="box" data-cols="2" data-rows="3 5">
       <strong class="allcaps block titlebar">Memory Layout</strong>
       <div class="center">
         <table _="
@@ -1248,7 +1250,7 @@
         </table>
       </div>
     </div>
-    <div id="outputBox" class="box" data-cols="4" data-rows="2 5">
+    <div id="outputBox" class="box" data-cols="3" data-rows="2 5">
       <strong class="allcaps block titlebar">Output</strong>
       <input type="button" _="on click set #outputPane.innerHTML to ''" value="Clear" />
       <div id="outputPane" class="box pane" _="
