fix cod eeditor size

--- a/lmsm-vanilla.html
+++ b/lmsm-vanilla.html
@@ -76,6 +76,13 @@
           call syncToDOM()
           " value="Run" />
           </label>
+          <label>
+            <input type="button" _="
+          on click 
+          call $lmsm.stepFirth()
+          call syncToDOM()
+          " value="Step" />
+          </label>
         </section>
         <textarea id="codeEditorFirth"></textarea>
     </div>
