--- a/lmsm-vanilla.html
+++ b/lmsm-vanilla.html
@@ -122,7 +122,7 @@
         <div class="box bad" data-cols="1">
           <label for="pc" class="bold">PC:
             <input id="pc" name="pc" class="register" type="text" size="3" _="
-              on load set @value to $lmsm.getProgramCounter()
+              on load set my value to $lmsm.getProgramCounter()
               on change
                 call $lmsm.setProgramCounter(my value)
                 call syncToDOM()
@@ -132,7 +132,7 @@
         <div class="box info" data-cols="2">
           <label for="acc" class="bold">ACC:
             <input id="acc" name="acc" class="register" size="3" type="text" _="
-            on load set @value to $lmsm.getAccumulator()
+            on load set my value to $lmsm.getAccumulator()
             on change call $lmsm.setAccumulator(my value)
           " />
           </label>
@@ -140,21 +140,24 @@
         <div class="box info" data-cols="3">
           <label for="ci" class="bold">CI:
             <input id="ci" name="ci" class="register" size="3" type="text" _="
-            on load set @value to $lmsm.getCurrentInstruction()
+            on load set my value to $lmsm.getCurrentInstruction()
+            on change call $lmsm.setCurrentInstruction(my value)
           " />
           </label>
         </div>
         <div class="box ok" data-cols="4">
           <label for="sp" class="bold">SP:
             <input id="sp" name="sp" class="register" size="3" type="text" _="
-            on load set @value to $lmsm.getStackPointer()
+            on load set my value to $lmsm.getStackPointer()
+            on change call $lmsm.setStackPointer(my value)
           " />
           </label>
         </div>
         <div class="box warn" data-cols="5">
           <label for="rap" class="bold">RAP:
             <input id="rap" name="rap" class="register" size="3" type="text" _="
-            on load set @value to $lmsm.getReturnAddressPointer()
+            on load set my value to $lmsm.getReturnAddressPointer()
+            on change call $lmsm.setReturnAddressPointer(my value)
           " />
           </label>
         </div>
@@ -1254,6 +1257,7 @@
       <input type="button" _="on click set #outputPane.innerHTML to ''" value="Clear" />
       <div id="outputPane" class="box pane" _="
         on output:append(timestamp, entry)
+          log entry
           set my.innerHTML to my.innerHTML + entry + '<br/>'
         on mutation of childList 
           me.scroll({top: my scrollHeight, left: 0, behavior: 'smooth'})
