link to emulator

--- a/emulator.html
+++ b/emulator.html
@@ -22,7 +22,7 @@
     <h1>Emulator</h1>
 
     <p>
-        We intend to build a web-based emulator, including a firth compiler, for the LMSM soon.
+        The LMSM emulator is a work in progress and can be found here: <a href="lmsm-vanilla.html">LMSM Emulator</a>
     </p>
 
 </main>
