--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
 
     <ul>
-        <li>The operations of a basic Von-Neumann style computer</li>
+        <li>The operations of a basic Von Neumann style computer</li>
         <li>How assembly works</li>
         <li>How assembly can be converted to machine code</li>
         <li>How function calls can be implemented using basic hardware</li>
