--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <li>
             The <code>return_address_pointer</code> register - a register that points to the memory location at the "top" of the
             return address stack.  This pointer starts at value 99 (meaning that the return address stack is empty) and it
-            is <em>incremented</em> as the value stack grows.
+            is <em>incremented</em> as the return address stack grows.
         </li>
     </ul>
 
