--- a/lmsm-vanilla.html
+++ b/lmsm-vanilla.html
@@ -23,7 +23,7 @@
 ">
   <div class="grid">
     <div id="titleBox" class="box center" data-cols="1 3" data-rows="1">
-      <h2 class="allcaps">Little Man Stack Machine Emulator</h2>
+      <h1 class="allcaps">🙋 Little Man Stack Machine Emulator</h2>
     </div>
     <div id="codeEditorBoxFirth" class="box" data-cols="1" data-rows="2">
       <strong class="allcaps block titlebar">Firth</strong>
@@ -53,28 +53,27 @@
       <textarea id="codeEditor"></textarea>
     </div>
     <div class="grid" data-cols="2" data-rows="2 3">
-      <div id="toolbarBox" class="box center" data-cols="1" data-rows="1">
-        <section class="tool-bar">
-          <label>
-            <input type="button" onclick="window.lmsm.run()" value="Run" />
-          </label>
-          <label>
-            <input type="button" onclick="window.lmsm.pause()" value="Pause" />
-          </label>
-          <label>
-            <input type="button" onclick="window.lmsm.resume()" value="Continue" />
-          </label>
-          <label>
-            <input type="button" onclick="
-              window.lmsm.step();
-              window.lmsm.syncToDOM();
-            " value="Step" />
-          </label>
-        </section>
-        <label for="speed">
-          Speed:
-          <input id="speed" name="speed" type="range" min="0" max="1000" value="500" step="100" oninput="window.lmsm.setSpeed(1000 - this.value);" />
-        </label>
+      <div id="toolbarBox" class="box" data-cols="1" data-rows="1">
+        <div class="center">
+          <section class="tool-bar">
+            <label>
+              <input type="button" onclick="window.lmsm.run()" value="Run" />
+            </label>
+            <label>
+              <input type="button" onclick="window.lmsm.pause()" value="Pause" />
+            </label>
+            <label>
+              <input type="button" onclick="window.lmsm.resume()" value="Continue" />
+            </label>
+            <label>
+              <input type="button" onclick="
+                  window.lmsm.step();
+                  window.lmsm.syncToDOM();
+                " value="Step" />
+            </label>
+          </section>
+          <label for="speed">Speed: <input id="speed" name="speed" type="range" min="0" max="1000" value="500" step="100" oninput="window.lmsm.setSpeed(1000 - this.value);" /></label>
+        </div>
       </div>
       <div id="registerFileBox" class="box" data-cols="1" data-rows="2">
         <strong class="allcaps block titlebar">Register File</strong>
@@ -1201,11 +1200,19 @@
       </div>
     </div>
     <div id="outputBox" class="box" data-cols="3" data-rows="2 4">
-      <strong class="allcaps block titlebar">Output</strong>
-      <div id="statusBox" class="box">Status: <output id="statusOutput"></output></div>
-      <div id="currentInstructionBox" class="box">Current Instruction: <output id="currentInstructionOutput"></output></div>
-      <input type="button" onclick="window.lmsm.clearOutput()" value="Clear" />
-      <div id="outputPane" class="box pane">
+      <!-- <strong class="allcaps block titlebar">Output</strong> -->
+      <div id="statusBox" class="box">
+        <strong class="allcaps block titlebar">Status</strong>
+        <h3 class="allcaps"><output id="statusOutput"></output></h3>
+      </div>
+      <div id="currentInstructionBox" class="box">
+        <strong class="allcaps block titlebar">Current Instruction</strong>
+        <output id="currentInstructionOutput"></output>
+      </div>
+      <div id="consoleBox" class="box">
+        <strong class="allcaps block titlebar">Console</strong>
+        <input type="button" onclick="window.lmsm.clearOutput()" value="Clear" />
+        <div id="outputPane" class="box pane"></div>
       </div>
     </div>
   </div>
